--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ nav {
   list-style: none;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   gap: 1.5rem;
   margin-top: 2rem;
 }
